# roboat

./: .gitignore  CLAUDE.md  README.md
.claude/skills/tunnel-verify/: SKILL.md
.github/workflows/: ci.yml  deploy-tunnel.yml
clients/: README.md
clients/go/: go.mod
clients/go/roboat/: client.go
clients/go/rtconnect/: client.go
clients/python/: pyproject.toml
clients/python/roboat/: __init__.py  daemon.py  sync.py
clients/python/rt_connect/: __init__.py  _proto.py  daemon.py  ipc_types.py
deploy/: Caddyfile.tunnel  README.md  bootstrap.sh  com.robotunnel.robotunneld.plist  robotunneld.service  setup.sh  tunnel.service
examples/agent-to-agent/: README.md  python_responder.py
examples/agent-to-agent/go_initiator/: go.mod  main.go
go/: go.mod  go.sum
go/cmd/tunnel-svc/: internal_api.go  main.go  resolver.go
go/connstate/: evidence.go  evidence_test.go  state.go  state_test.go
go/db/: embed.go
go/db/migrations/: 0001_tunnel_schema.sql
go/internal/config/: config.go
go/internal/connauth/: connauth.go
go/internal/opsauth/: opsauth.go
go/internal/store/: store.go
go/relay/: bootstrap.go  fallback_gate.go  relay.go  server.go
go/webrtc/: session.go  signaling.go  turn.go
rust/: Cargo.toml
rust/crates/rt-core/: Cargo.toml
rust/crates/rt-daemon/: Cargo.toml
rust/crates/rt-daemon/src/: ipc.rs  lib.rs  manager.rs  server.rs
rust/crates/rt-webrtc/: Cargo.toml
spec/: addressing.md  daemon-ipc.md  tunnel-protocol.md
