[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roboat"
version = "0.2.0"
description = "RoboTunnel thin client — connect agents via local daemon socket"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/get-robotunnel/roboat"
