[package]
name = "rt-daemon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/get-robotunnel/robot-agent-tunnel"
description = "RoboTunnel daemon — exposes tunnel connectivity via local IPC socket"

[dependencies]
rt-core = { path = "../rt-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
